--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+	box-sizing: border-box;
+}
+
+@layer base {
+	html {
+		font-family: "Montserrat", sans-serif;
+		font-size: 16px;
+		line-height: 1.5;
+	}
+
+	@media (min-width: 768px) {
+		html {
+			font-size: 18px;
+		}
+	}
+
+	@media (min-width: 1024px) {
+		html {
+			font-size: 20px;
+		}
+	}
+
+	@media (min-width: 1280px) {
+		html {
+			font-size: 22px;
+		}
+	}
+
+	@media (min-width: 1536px) {
+		html {
+			font-size: 24px;
+		}
+	}
+
+	body {
+		margin: 0;
+	}
+
+	::selection {
+		background-color: rgba(255, 255, 255, 0.5);
+	}
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--foreground-rgb: 0, 0, 0;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: rgb(var(--foreground-rgb));
+	background: linear-gradient(
+			to bottom,
+			transparent,
+			rgb(var(--background-end-rgb))
+		)
+		rgb(var(--background-start-rgb));
 }
